PyMaker/datas/object2/RawHTML/i4901/Python_DOC_referPages.python-except-oserror-e.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/14908789/whats-wrong-with-my-except">What's wrong with my except? [duplicate]</a>
<span class="question-originals-answer-count">
                    2 answers
                </span>
</li>
<li>
<a dir="ltr" href="/questions/2535760/python-try-except-comma-vs-as-in-except">Python try…except comma vs 'as' in except</a>
<span class="question-originals-answer-count">
                    4 answers
                </span>
</li>
</ul>
</div>
<p>I'm currently developing a website with the SST - Web Test Framework (i'm very beginner) but I have a problem with python</p>
<p>I used this Link: <a href="https://pypi.python.org/pypi/sst/0.2.2" rel="nofollow noreferrer">https://pypi.python.org/pypi/sst/0.2.2</a></p>
<p>I m using - Python 3.6.4 and SST - Web Test Framework- Latest Version: 0.2.4</p>
<p>My Code is:</p>
<pre><code>from sst.actions import *
go_to('http://www.google.com/')
</code></pre>
<p>Error is:</p>
<pre><code>C:\Python\scrapy-master\Projects&gt;python proxyhar.py
Traceback (most recent call last):
File "proxyhar.py", line 1, in &lt;module&gt;
from sst.actions import *
File "C:\Python\lib\site-packages\sst\actions.py", line 274, in &lt;module&gt;
except OSError, e:
              ^
SyntaxError: invalid syntax
</code></pre>
<p>Anyone suggest me how to resolve this.</p>
<p>Thank you</p>
</div>
<div class="post-text" itemprop="text">
<p>Python 3 has changed how this expression should be written.  <a href="https://docs.python.org/3/reference/compound_stmts.html#the-try-statement" rel="nofollow noreferrer">From the documentation</a>, it is now <code>except OSError as e</code>.</p>
<p>Note that in Python 2, <a href="https://docs.python.org/2.7/reference/compound_stmts.html#the-try-statement" rel="nofollow noreferrer">both comma and <code>as</code> were permitted</a>.</p>
</div>
<span class="comment-copy">That is deprecated Python 2 syntax. Replace it with <code>except OSError as e</code>.</span>
<span class="comment-copy">What is python's work around for this issue?</span>
